--- a/html-v1/assets/css/custom.css
+++ b/html-v1/assets/css/custom.css
@@ -157,8 +157,9 @@ textarea { min-height: 125px; resize: none; }
 .primary-menu:after, .primary-menu > ul:after { content: "."; display: block; clear: both; visibility: hidden; line-height: 0; height: 0; }
 .primary-menu .menu-button { display: none; }
 .primary-menu .menu-button, .primary-menu ul, .primary-menu ul li, .primary-menu ul li a { margin: 0; padding: 0; border: 0; list-style: none; line-height: 1; display: block; position: relative; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
+.primary-menu ul li svg { display: none; }
 .primary-menu > ul { margin: 0px -18px; }
-.primary-menu > ul > li { float: left; position: relative; margin: 0px 18px; }
+.primary-menu > ul > li { float: left; position: relative; margin: 0px 5px; }
 .primary-menu > ul > li.has-sub > a { padding-right: 25px; }
 .primary-menu > ul > li > a { padding: 0px; color: #80C7BC; text-decoration: none; text-transform: capitalize; }
 .primary-menu > ul > li:hover > ul { left: auto; }
@@ -167,20 +168,21 @@ textarea { min-height: 125px; resize: none; }
 .primary-menu > ul > li:hover:after { width: 100%; }
 .primary-menu ul li:hover > ul { left: auto; }
 .primary-menu ul li a { /*background:gray;*/ text-transform: uppercase; color: #80C7BC; }
-.primary-menu ul ul { position: absolute; left: -9999px; }
-.primary-menu ul ul li { position: relative; }
+.primary-menu ul ul { position: absolute; min-width: 250px; width: 100%; background: #80C7BC; left: -9999px; top: 22px; }
+.primary-menu ul ul li { position: relative; border-bottom: rgba(47, 93, 158, 0.5) solid 1px; }
 .primary-menu ul ul li a { padding: 11px 15px; width: 100%; text-decoration: none; }
+.primary-menu ul ul li a:hover { background: #2F5D9E; color: #fff; }
 .primary-menu ul ul ul { margin-left: 100%; top: 0; }
 .primary-menu ul ul ul ul { margin-left: 100%; top: 0; }
 
 /* mobile menu css */
 .primary-menu.small-screen { width: 100%; position: inherit; }
-.primary-menu.small-screen ul { width: 100%; display: none; position: absolute; background-color: #80C7BC; right: 0; box-shadow: none; z-index: 2; margin: 0px; }
+.primary-menu.small-screen ul { width: 100%; display: none; position: absolute; background-color: #80C7BC; right: 0; box-shadow: none; z-index: 9; margin: 0px; }
 .primary-menu.small-screen ul li { width: 100%; border-bottom: rgba(0, 0, 0, 0.1) solid 1px; }
 .primary-menu.small-screen ul li:hover > ul > li { height: auto; float: none; }
 .primary-menu.small-screen ul li a { width: 100%; border-bottom: 0; padding: 15px 17px; color: #fff; font-weight: 600; }
 .primary-menu.small-screen ul li a:hover { color: #2F5D9E; }
-.primary-menu.small-screen ul ul { position: relative; width: 100%; left: 0; }
+.primary-menu.small-screen ul ul { position: relative; width: 100%; left: 0; top: 0; }
 .primary-menu.small-screen ul ul li { height: auto; background: #287b95; }
 .primary-menu.small-screen ul ul li a { width: 100%; border-bottom: 0; padding-left: 25px; border-bottom: rgba(255, 255, 255, 0.1) solid 1px; }
 .primary-menu.small-screen ul ul li .submenu-button { height: 44px; width: 44px; }
@@ -195,12 +197,12 @@ textarea { min-height: 125px; resize: none; }
 .primary-menu.small-screen .menu-button.menu-opened:after { top: 23px; border: 0; height: 2px; width: 15px; -webkit-transform: rotate(45deg); -moz-transform: rotate(45deg); -ms-transform: rotate(45deg); -o-transform: rotate(45deg); transform: rotate(45deg); background-color: #F9485C; }
 .primary-menu.small-screen .menu-button.menu-opened:before { top: 23px; width: 15px; -webkit-transform: rotate(-45deg); -moz-transform: rotate(-45deg); -ms-transform: rotate(-45deg); -o-transform: rotate(-45deg); transform: rotate(-45deg); background-color: #F9485C; }
 .primary-menu.small-screen .submenu-button { position: absolute; z-index: 99; right: 0; top: 0; display: block; height: 46px; width: 46px; cursor: pointer; }
-.primary-menu.small-screen .submenu-button:before { position: absolute; top: 19px; right: 22px; display: block; width: 2px; height: 8px; content: ''; display: block; background: #fafafa; }
-.primary-menu.small-screen .submenu-button:after { position: absolute; top: 22px; right: 19px; width: 8px; height: 2px; display: block; content: ''; display: block; background: #fafafa; }
-.primary-menu.small-screen .submenu-button.submenu-opened:before { display: block; background: #fafafa; }
+.primary-menu.small-screen .submenu-button:before { position: absolute; top: 19px; right: 22px; width: 2px; height: 8px; content: ''; display: none; background: #fafafa; }
+.primary-menu.small-screen .submenu-button:after { position: absolute; top: 22px; right: 19px; width: 8px; height: 2px; content: ''; display: none; background: #fafafa; }
+.primary-menu.small-screen .submenu-button.submenu-opened:before { display: none; background: #fafafa; }
 .primary-menu.small-screen.select-list { padding: 5px; }
 
-.primary-menu > ul > li.has-sub > a:after, .primary-menu > ul > li.has-sub > a:before, .primary-menu ul ul li.has-sub > a:after, .primary-menu ul ul li.has-sub > a:before { display: block; position: absolute; content: ''; background: #F9485C; }
+.primary-menu > ul > li.has-sub > a:after, .primary-menu > ul > li.has-sub > a:before, .primary-menu ul ul li.has-sub > a:after, .primary-menu ul ul li.has-sub > a:before { display: block; position: absolute; content: ''; background: #a5a5a5; }
 
 .primary-menu > ul > li.has-sub > a:before, .primary-menu ul ul li.has-sub > a:before { top: 50%; margin-top: -3px; right: 12px; width: 2px; height: 6px; transform: rotate(45deg); -webkit-transform: rotate(45deg); }
 
@@ -279,11 +281,14 @@ span:last-child{ transform:rotate(-45deg); bottom: 7px; left: 3px;
 /* home-three-colrbox-secn css ended */
 /* team box css start */
 .team-box { text-align: center; }
-.team-box .team-image { width: 210px; height: 210px; border-radius: 100%; -webkit-border-radius: 100%; overflow: hidden; margin: 0px 0px 30px 0px; display: inline-block; }
+.team-box .team-image { width: 210px; height: 210px; position: relative; border-radius: 100%; -webkit-border-radius: 100%; overflow: hidden; margin: 0px 0px 30px 0px; display: inline-block; }
 .team-box .team-image img { width: 100%; height: 100%; object-fit: cover; }
+.team-box .team-image .team-image-overlay { content: ''; position: absolute; width: 0%; height: 0%; top: 0px; right: 0px; bottom: 0px; left: 0px; margin: auto; z-index: 2; opacity: 0; border-radius: 100%; -webkit-border-radius: 100%; background: rgba(47, 93, 158, 0.6); transition: all ease 0.3s; -webkit-transition: all ease 0.3s; }
+.team-box .team-image .team-image-overlay.green-overlay { background: rgba(128, 199, 188, 0.6); }
 .team-box .team-cont { padding: 0px; width: 100%; display: inline-block; }
 .team-box .heading-md { margin: 0px 0px 0px 0px; }
 .team-box p { font-size: 20px; line-height: 20px; margin: 0px 0px 0px 0px; }
+.team-box:hover .team-image-overlay { opacity: 1; width: 100%; height: 100%; transition: all ease 0.3s; -webkit-transition: all ease 0.3s; }
 
 /* team box css ended */
 /* newsletter section css start */
