--- a/html-v1/assets/sass/_template.scss
+++ b/html-v1/assets/sass/_template.scss
@@ -201,6 +201,7 @@ header{
     .team-image{
         width:210px;
         height:210px;
+        position: relative;
         border-radius:100%;
         -webkit-border-radius:100%;
         overflow: hidden;
@@ -210,6 +211,27 @@ header{
             width:100%;
             height:100%;
             object-fit: cover;
+        }
+        .team-image-overlay{
+            content:'';
+            position: absolute;
+            width:0%;
+            height:0%;
+            top:0px;
+            right:0px;
+            bottom:0px;
+            left:0px;
+            margin:auto;
+            z-index:2;
+            opacity:0;
+            border-radius:100%;
+            -webkit-border-radius:100%;
+            background:rgba($blue, 0.6);
+            transition: all ease 0.3s;
+            -webkit-transition: all ease 0.3s;
+            &.green-overlay{
+                background:rgba($green, 0.6);
+            }
         }
     }
     .team-cont{
@@ -225,8 +247,18 @@ header{
         line-height:20px;
         margin:0px 0px 0px 0px;
     }
+    &:hover{
+        .team-image-overlay{
+            opacity: 1;
+            width:100%;
+            height:100%;
+            transition: all ease 0.3s;
+            -webkit-transition: all ease 0.3s;
+        }
+    }
 }
 /* team box css ended */
+
 
 /* newsletter section css start */
 .newsletter-secn{
