--- a/HTML/html-v2/assets/sass/_home-banner.scss
+++ b/HTML/html-v2/assets/sass/_home-banner.scss
@@ -31,4 +31,7 @@
             right:20px;
         }
     }
+    .owl-dots{
+        width:100%; text-align:center; position: absolute; bottom:10px;
+    }
 }
