--- a/HTML/html-v2/assets/css/custom.css
+++ b/HTML/html-v2/assets/css/custom.css
@@ -1,9 +1,9 @@
 * { padding: 0px; margin: 0px; outline: none; }
 
 /* placeholder and Selection css */
-::selection { /*color:$white; background:blue;*/ }
+::selection { color: #fff; background: blue; }
 
-::-moz-selection { /*color:$white; background:blue;*/ }
+::-moz-selection { color: #fff; background: blue; }
 
 ::-webkit-input-placeholder { color: blue; text-overflow: ellipsis; font-size: 16px; }
 
@@ -14,7 +14,7 @@
 /* body css property */
 body, html { height: 100%; -moz-osx-font-smoothing: grayscale; }
 
-body { font-family: "Archivo Black", sans-serif; line-height: 20px; -webkit-font-smoothing: antialiased; font-smoothing: antialiased; }
+body { font-family: "Poppins", sans-serif; line-height: 20px; -webkit-font-smoothing: antialiased; font-smoothing: antialiased; }
 
 h1, h2, h3, h4, h5, h6 { margin-top: 0px; }
 
@@ -154,57 +154,83 @@ header .btmSectn { padding: 10px 0px; }
 header .btmSectn .row { justify-content: space-between; }
 
 /* primary menu css */
-.primary-menu { background: #2ba0db; position: relative; }
+.primary-menu { position: relative; }
 .primary-menu > ul { background: #159a6f; }
-.primary-menu ul { font-size: 0; margin: 0; padding: 0; }
+.primary-menu ul { margin: 0; padding: 0; }
 .primary-menu ul li { display: inline-block; position: relative; }
 .primary-menu ul li a { color: #fff; display: block; font-size: 14px; padding: 15px 14px; transition: 0.3s linear; -webkit-transition: 0.3s linear; }
-.primary-menu ul li:hover { background: #126d9b; }
-.primary-menu ul li.submenu a { padding-right: 20px; position: relative; }
-.primary-menu ul li.submenu:hover > a { background: #126d9b; }
+.primary-menu ul li a:hover { background: #006391; }
+.primary-menu ul li ul { background: #373737; border-bottom: 5px solid #2ba0db; display: none; position: absolute; width: 100%; min-width: 250px; z-index: 99; }
+.primary-menu ul li ul li { width: 100%; display: block; }
+.primary-menu ul li ul li a { width: 100%; display: inline-block; padding: 15px 14px; }
+.primary-menu ul li ul li a:hover { background: #129b29; }
+.primary-menu ul li ul li ul { left: 100%; top: 0px; }
+.primary-menu ul li.submenu a { padding-right: 25px; position: relative; }
+.primary-menu ul li.submenu:hover > a { background: #9b1290; }
 .primary-menu ul li.submenu > a:after { background: #fff; }
 .primary-menu ul li.submenu > a:before { background: #fff; }
-.primary-menu ul li ul { border-bottom: 5px solid #2ba0db; display: none; position: absolute; width: 100%; min-width: 250px; z-index: 99; }
-.primary-menu ul li ul li { width: 100%; border-top: 1px solid #444; display: block; }
-.primary-menu ul li ul li a { width: 100%; background: #373737; display: inline-block; padding: 15px 14px; }
-.primary-menu ul li ul li a:hover { background: #126d9b; }
-.primary-menu ul li ul li:first-child { border-top: none; }
-.primary-menu ul li ul li.submenu > a:after { background: yellow; }
-.primary-menu ul li ul li.submenu > a:before { background: yellow; }
-.primary-menu ul li ul li ul { left: 100%; top: 0px; }
-.primary-menu .burgermenu-icon { width: 40px; height: 40px; float: right; background: #ff00ff; }
-
-.mobile-navbar { background: #ff0000; display: none; height: 40px; }
+.primary-menu ul li.submenu .submenu > a:after { background: yellow; }
+.primary-menu ul li.submenu .submenu > a:before { background: yellow; }
+.primary-menu .burgermenu-icon { width: 40px; height: 34px; float: right; position: relative; }
+.primary-menu .burgermenu-icon:after, .primary-menu .burgermenu-icon:before { transition: all ease 0.3s; -webkit-transition: all ease 0.3s; }
+.primary-menu .burgermenu-icon:after { content: ''; position: absolute; top: 0px; width: 100%; height: 20px; border-color: red; border-style: solid; border-width: 6px 0px; }
+.primary-menu .burgermenu-icon:before { content: ''; position: absolute; bottom: 0; width: 100%; width: 100%; height: 6px; background-color: red; }
+.primary-menu .burgermenu-icon.opened:after, .primary-menu .burgermenu-icon.opened:before { transform: translate(0px, -50%); -webkit-transform: translate(0px, -50%); top: 50%; }
+.primary-menu .burgermenu-icon.opened:after { height: 0px; border-width: 3px 0px; transform: rotate(-45deg); -webkit-transform: rotate(-45deg); }
+.primary-menu .burgermenu-icon.opened:before { transform: rotate(45deg); -webkit-transform: rotate(45deg); }
 
 .primary-menu ul li.submenu > a:after { content: ''; position: absolute; top: 50%; right: 10px; width: 7px; height: 2px; margin-top: -1px; transform: rotate(45deg); -webkit-transform: rotate(45deg); z-index: 1; }
 
 .primary-menu ul li.submenu > a:before { content: ''; position: absolute; top: 50%; right: 6px; width: 7px; height: 2px; margin-top: -1px; transform: rotate(-45deg); -webkit-transform: rotate(-45deg); z-index: 1; }
 
-.primary-menu ul li ul li.submenu > a:after { content: ''; position: absolute; top: 50%; right: 10px; width: 7px; height: 2px; margin-top: -3px; transform: rotate(45deg); -webkit-transform: rotate(45deg); z-index: 1; }
+.primary-menu ul li.submenu .submenu > a:after { content: ''; position: absolute; top: 50%; right: 10px; width: 7px; height: 2px; margin-top: -3px; transform: rotate(45deg); -webkit-transform: rotate(45deg); z-index: 1; }
 
-.primary-menu ul li ul li.submenu > a:before { content: ''; position: absolute; top: 50%; right: 10px; width: 7px; height: 2px; margin-top: 1px; transform: rotate(-45deg); -webkit-transform: rotate(-45deg); z-index: 1; }
+.primary-menu ul li.submenu .submenu > a:before { content: ''; position: absolute; top: 50%; right: 10px; width: 7px; height: 2px; margin-top: 1px; transform: rotate(-45deg); -webkit-transform: rotate(-45deg); z-index: 1; }
 
-@media (max-width: 991px) { .primary-menu .mobilemenu_ul { left: -100%; opacity: 0; }
-  .mobile-view .mobile-navbar { display: block; }
-  .mobile-view .mobilemenu_ul { display: none; width: 100%; position: absolute; }
-  .mobile-view .mobilemenu_ul.flyout_left { position: relative; display: block; visibility: hidden; transition: all ease 0.4s; -webkit-transition: all ease 0.4s; left: -100%; opacity: 0; }
-  .mobile-view .mobilemenu_ul.flyout_left.ul_opened { left: 0%; opacity: 1; visibility: visible; }
-  .mobile-view .sub-dropdown { width: 40px; height: 47px; position: absolute; top: 0; right: 0px; z-index: 21; }
-  .mobile-view .sub-dropdown:after, .mobile-view .sub-dropdown:before { content: ''; width: 10px; height: 4px; background: #fff; position: absolute; border-radius: 4px; -webkit-border-radius: 4px; top: 50%; left: 45%; margin-top: -2px; transition: all ease 0.4s; -webkit-transition: all ease 0.4s; }
-  .mobile-view .sub-dropdown:after { margin-left: -5px; transform: rotate(45deg); }
-  .mobile-view .sub-dropdown:before { margin-right: 5px; transform: rotate(-45deg); }
-  .mobile-view .sub-dropdown.expanded:after { margin-right: -5px; transform: rotate(-45deg); }
-  .mobile-view .sub-dropdown.expanded:before { margin-right: 5px; transform: rotate(45deg); }
-  .mobile-view ul { margin: 0px; }
-  .mobile-view ul li { width: 100%; display: inline-block; }
-  .mobile-view ul li a { width: 100%; display: inline-block; padding: 15px 14px; border-bottom: #126d9b solid 1px; }
-  .mobile-view ul li ul { width: 100%; position: relative; left: 0; border: none; }
-  .mobile-view ul li ul li ul { left: 0; }
-  .mobile-view ul li.show-sub > ul { display: inline-block; }
-  .mobile-view ul li.submenu > a:after { display: none; }
-  .mobile-view ul li.submenu > a:before { display: none; }
-  .mobile-view ul li.submenu a:after { display: none; }
-  .mobile-view ul li.submenu a:before { display: none; } }
+.mobile-navbar { height: 34px; display: none; }
+
+.mobilemenu_ul.flyout_left .primary_menu_mobile_hdng { display: none; }
+
+@media (max-width: 991px) { .primary-menu.menu_opened:after { width: 100%; height: 100vh; background: rgba(0, 0, 0, 0.3); content: ''; position: fixed; top: 0px; left: 0px; z-index: 0; }
+  .primary-menu .mobilemenu_ul { left: auto; right: 0px; opacity: 1; }
+  .primary-menu .mobile-navbar { display: block; }
+  .primary-menu ul { margin: 0px; }
+  .primary-menu ul > li > a { color: #006391; }
+  .primary-menu ul li { width: 100%; display: inline-block; }
+  .primary-menu ul li .sub-dropdown:after { background: yellow; }
+  .primary-menu ul li .sub-dropdown:before { background: yellow; }
+  .primary-menu ul li a { width: 100%; display: inline-block; padding: 15px 14px; font-size: 14px; border-bottom: none; color: #fff; }
+  .primary-menu ul li ul { width: 100%; position: relative; background: transparent; left: 0; border: none; }
+  .primary-menu ul li ul li a { padding: 10px 12px; }
+  .primary-menu ul li ul li ul { left: 0; transition: 0.1s linear; -webkit-transition: 0.1s linear; }
+  .primary-menu ul li:hover a { background: transparent; }
+  .primary-menu ul li ul li a { color: #fff; }
+  .primary-menu ul li ul li:hover a { background: transparent; }
+  .primary-menu ul li.submenu:hover > a { background: transparent; }
+  .primary-menu ul li.submenu > a:after { display: none; }
+  .primary-menu ul li.submenu > a:before { display: none; }
+  .primary-menu ul li.submenu a:after { display: none; }
+  .primary-menu ul li.submenu a:before { display: none; }
+  .primary-menu ul li.submenu.submenu_expanded { margin-bottom: 1px; background: rgba(0, 0, 0, 0.3); }
+  .primary-menu ul li.submenu.submenu_expanded > ul { padding-left: 10px; }
+  .primary-menu ul li.submenu.submenu_expanded > a { background: rgba(0, 0, 0, 0.9); }
+  .primary-menu .sub-dropdown { width: 40px; height: 47px; position: absolute; top: 0; right: 0px; z-index: 21; }
+  .primary-menu .sub-dropdown:after, .primary-menu .sub-dropdown:before { content: ''; width: 10px; height: 4px; background: #006391; position: absolute; border-radius: 4px; -webkit-border-radius: 4px; top: 50%; left: 45%; margin-top: -2px; transition: all ease 0.4s; -webkit-transition: all ease 0.4s; }
+  .primary-menu .sub-dropdown:after { margin-left: -5px; transform: rotate(45deg); }
+  .primary-menu .sub-dropdown:before { margin-right: 5px; transform: rotate(-45deg); }
+  .primary-menu .mobilemenu_ul { display: none; width: 100%; min-width: 300px; position: absolute; margin-top: 20px; }
+  .primary-menu .mobilemenu_ul.flyout_left { max-width: 300px; height: 100vh; overflow-y: auto; position: fixed; display: block; visibility: hidden; transition: all ease 0.4s; -webkit-transition: all ease 0.4s; left: -100%; right: auto; top: 0px; opacity: 0; }
+  .primary-menu .mobilemenu_ul.flyout_left.ul_opened { left: 0%; opacity: 1; visibility: visible; z-index: 21; background: #fff; }
+  .primary-menu .mobilemenu_ul.flyout_right { max-width: 300px; height: 100vh; overflow-y: auto; position: fixed; display: block; visibility: hidden; transition: all ease 0.4s; -webkit-transition: all ease 0.4s; right: -100%; left: auto; top: 0px; opacity: 0; }
+  .primary-menu .mobilemenu_ul.flyout_right.ul_opened { right: 0%; opacity: 1; visibility: visible; z-index: 21; background: #fff; }
+  .primary-menu .mobilemenu_ul.flyout_left li.primary_menu_mobile_hdng, .primary-menu .mobilemenu_ul.flyout_right li.primary_menu_mobile_hdng { display: block; background: #550505; color: #fff; padding: 15px 10px; font-size: 20px; top: 0px; left: 0px; }
+  .primary-menu .mobilemenu_ul.flyout_left .menuclose-icon, .primary-menu .mobilemenu_ul.flyout_right .menuclose-icon { width: 30px; height: 30px; background: #ff00ff; position: absolute; top: 10px; right: 10px; }
+  .primary-menu .mobilemenu_ul.flyout_left li a, .primary-menu .mobilemenu_ul.flyout_right li a { color: #006391; }
+  .primary-menu .mobilemenu_ul.flyout_left .submenu.submenu_expanded, .primary-menu .mobilemenu_ul.flyout_right .submenu.submenu_expanded { background: #e4f2f8; margin-bottom: 1px; }
+  .primary-menu .mobilemenu_ul.flyout_left .submenu.submenu_expanded > ul, .primary-menu .mobilemenu_ul.flyout_right .submenu.submenu_expanded > ul { padding-left: 10px; }
+  .primary-menu .mobilemenu_ul.flyout_left .submenu.submenu_expanded > a, .primary-menu .mobilemenu_ul.flyout_right .submenu.submenu_expanded > a { background: #9ddffd; }
+  .primary-menu .mobilemenu_ul.flyout_left .sub-dropdown:after, .primary-menu .mobilemenu_ul.flyout_right .sub-dropdown:after { background: #006391; }
+  .primary-menu .mobilemenu_ul.flyout_left .sub-dropdown:before, .primary-menu .mobilemenu_ul.flyout_right .sub-dropdown:before { background: #006391; } }
 /* home banner css */
 .home-banner-area { width: 100%; padding: 0px; position: relative; }
 
@@ -217,3 +243,14 @@ header .btmSectn .row { justify-content: space-between; }
 .singleAnimatedBanner .owl-nav .owl-prev, .singleAnimatedBanner .owl-nav .owl-next { position: absolute; top: 50%; transform: translate(0px, -50%); -webkit-transform: translate(0px, -50%); z-index: 2; }
 .singleAnimatedBanner .owl-nav .owl-prev { left: 20px; }
 .singleAnimatedBanner .owl-nav .owl-next { right: 20px; }
+.singleAnimatedBanner .owl-dots { width: 100%; text-align: center; position: absolute; bottom: 10px; }
+
+.home-search-area { width: 100%; padding: 20px 0px; position: relative; background: #6c7476; }
+
+.search-form-wrap { width: 100%; padding: 0px; position: relative; display: -ms-flexbox; display: flex; align-items: center; }
+.search-form-wrap .colum { position: relative; flex: 1; }
+.search-form-wrap .colum:first-child { flex-basis: 400px; }
+.search-form-wrap .colum:first-child input[type=text] { border-radius: 10px 0px 0px 10px; border-width: 0px 2px 0px 0px; }
+.search-form-wrap .colum:nth-child(2) { flex-basis: 200px; }
+.search-form-wrap input[type=text] { margin: 0px; background: #fff; border-radius: 0px; border-color: rgba(0, 0, 0, 0.2); border-width: 0px 0px 0px 0px; border-style: solid; }
+.search-form-wrap input[type=submit] { width: 100%; height: 64px; margin: 0px; background: #0190c8; border: none; border-radius: 0px 10px 10px 0px; color: #fff; }
