--- a/HTML/html-v2/assets/sass/_primary-menu.scss
+++ b/HTML/html-v2/assets/sass/_primary-menu.scss
@@ -1,12 +1,10 @@
 /* primary menu css */
 .primary-menu {
-    background: #2ba0db;
     position: relative;
     > ul{
         background:#159a6f;
     }
     ul{
-        font-size: 0;
         margin: 0;
         padding: 0;
         li{
@@ -19,18 +17,43 @@
                 padding: 15px 14px;
                 transition: 0.3s linear;
                 -webkit-transition: 0.3s linear;
+                &:hover{
+                    background: #006391;
+                }
             }
-            &:hover{
-                background: #126d9b;
+            ul{
+                background: #373737;
+                border-bottom: 5px solid #2ba0db;
+                display: none;
+                position: absolute;
+                width:100%;
+                min-width: 250px;
+                z-index:99;
+                li{
+                    width:100%;
+                    display: block;
+                    a{
+                        width:100%;
+                        display: inline-block;
+                        padding: 15px 14px;
+                        &:hover{
+                            background: #129b29;
+                        }
+                    }
+                    ul{
+                        left: 100%;
+                        top: 0px;
+                    }
+                }
             }
             &.submenu{
                 a{
-                    padding-right:20px;
+                    padding-right:25px;
                     position: relative;
                 }
                 &:hover{
                     > a{
-                        background: #126d9b;
+                        background: #9b1290;
                     }
                 }
                 > a{
@@ -43,45 +66,16 @@
                         background:#fff;
                     }
                 }
-            }
-            ul{
-                border-bottom: 5px solid #2ba0db;
-                display: none;
-                position: absolute;
-                width:100%;
-                min-width: 250px;
-                z-index:99;
-                li{
-                    width:100%;
-                    border-top: 1px solid #444;
-                    display: block;
-                    a{
-                        width:100%;
-                        background: #373737;
-                        display: inline-block;
-                        padding: 15px 14px;
-                        &:hover{
-                            background: #126d9b;
+                .submenu{
+                    > a{
+                        &:after{
+                            @extend %super-submenu-arrow-after;
+                            background:yellow;
                         }
-                    }
-                    &:first-child{
-                        border-top: none;
-                    }
-                    &.submenu{
-                        > a{
-                            &:after{
-                                @extend %super-submenu-arrow-after;
-                                background:yellow;
-                            }
-                            &:before{
-                                @extend %super-submenu-arrow-before;
-                                background:yellow;
-                            }
+                        &:before{
+                            @extend %super-submenu-arrow-before;
+                            background:yellow;
                         }
-                    }
-                    ul{
-                        left: 100%;
-                        top: 0px;
                     }
                 }
             }
@@ -89,21 +83,51 @@
     }
     .burgermenu-icon{
         width:40px;
-        height:40px;
+        height:34px;
         float:right;
-        background:#ff00ff;
+        position: relative;
+        &:after, &:before{
+            transition: all ease 0.3s;
+            -webkit-transition: all ease 0.3s;
+        }
+        &:after{
+            content:'';
+            position: absolute;
+            top:0px;
+            width:100%;
+            height:20px;
+            border-color:red;
+            border-style:solid;
+            border-width:6px 0px;
+        }
+        &:before{
+            content:'';
+            position: absolute;
+            bottom:0;
+            width:100%;
+            width:100%;
+            height:6px;
+            background-color:red;
+        }
+        &.opened{
+            &:after, &:before{
+                transform:translate(0px, -50%);
+                -webkit-transform:translate(0px, -50%);
+                top:50%;
+            }
+            &:after{
+                height:0px;
+                border-width:3px 0px;
+                transform: rotate(-45deg);
+                -webkit-transform: rotate(-45deg);
+            }
+            &:before{
+                transform: rotate(45deg);
+                -webkit-transform: rotate(45deg);
+            }
+        }
     }
 }
-
-
-.mobile-navbar{
-    background:#ff0000;
-    display:none;
-    height:40px;
-}
-
-
-
 
 %submenu-arrow-after{
     content:'';
@@ -158,37 +182,143 @@
     z-index:1;
 }
 
+.mobile-navbar{
+    height:34px;
+    display:none;
+}
+
+.mobilemenu_ul{
+    &.flyout_left{
+        .primary_menu_mobile_hdng{
+            display:none;
+        }
+    }
+}
+
+
 
 @media (max-width:991px){
 
+    
+
     .primary-menu{
-        .mobilemenu_ul{
-            left:-100%;
-            opacity:0;
+        &.menu_opened{
+            &:after{
+                width:100%;
+                height:100vh;
+                background:rgba(0,0,0,0.3);
+                content:'';
+                position: fixed;
+                top:0px;
+                left:0px;
+                z-index:0;
+            }
         }
-    } 
-    .mobile-view{
+        .mobilemenu_ul{
+            left:auto;
+            right:0px;
+            opacity:1;
+        }
+     
         .mobile-navbar{
             display:block;
         }
-        .mobilemenu_ul{
-            display:none;
-            width:100%;
-            position: absolute;
-
-            &.flyout_left{
-                position: relative;
-                display:block;
-                visibility:hidden;
-                transition: all ease 0.4s;
-                -webkit-transition: all ease 0.4s;
-                left:-100%;
-                opacity:0;
-                &.ul_opened{
-                    left:0%; opacity:1; visibility:visible;
+        ul{
+            margin:0px;
+            > li{
+                > a{
+                    color:#006391;
                 }
             }
-
+            li{
+                width: 100%;
+                display:inline-block;
+                .sub-dropdown{
+                    &:after{
+                        background:yellow;
+                    }
+                    &:before{
+                        background:yellow;
+                    }
+                }
+                a{
+                    width: 100%;
+                    display:inline-block;
+                    padding: 15px 14px;
+                    font-size:14px;
+                    border-bottom:none;
+                    color:#fff;
+                    
+                }
+                ul{
+                    width:100%;
+                    position: relative;
+                    background:transparent;
+                    left:0;
+                    border:none;
+                    li{
+                        a{
+                            padding: 10px 12px;
+                        }
+                        ul{
+                            left:0;
+                            transition: 0.1s linear;
+                            -webkit-transition: 0.1s linear;
+                        }
+                    }
+                }
+                &:hover{
+                    a{
+                        background:transparent;
+                    }
+                }
+                ul{
+                    li{
+                        a{
+                            color:#fff;
+                        }
+                        &:hover{
+                            a{
+                                background:transparent;
+                            }
+                        }
+                    }
+                }
+                &.submenu{
+                    &:hover{
+                        > a{
+                            background:transparent;
+                        }
+                    }
+                    > a{
+                        &:after{
+                            display:none;
+                        }
+                        &:before{
+                            display:none;
+                        }
+                    }
+                    a{
+                        &:after{
+                            display:none;
+                        }
+                        &:before{
+                            display:none;
+                        }
+                    }
+                    &.submenu_expanded{
+                        margin-bottom:1px;
+                        background:rgba(0,0,0,0.3);
+                        > ul{
+                            padding-left:10px;
+                        }
+                            
+                        > a{
+                            background:rgba(0,0,0,0.9);
+                        }
+                    }
+                }
+            }
         }
         .sub-dropdown{
             width:40px;
@@ -202,7 +332,7 @@
                 content:'';
                 width:10px;
                 height:4px;
-                background:#fff;
+                background:#006391;
                 position: absolute;
                 border-radius:4px;
                 -webkit-border-radius:4px;
@@ -220,68 +350,112 @@
                 margin-right:5px;
                 transform: rotate(-45deg);
             }
-            &.expanded{
-                &:after{
-                    margin-right:-5px;
-                    transform: rotate(-45deg);
-                }
-                &:before{
-                    margin-right:5px;
-                    transform: rotate(45deg);
-                }
-            }
+            
         }
-        ul{
-            margin:0px;
-            li{
-                width: 100%;
-                display:inline-block;
-                a{
-                    width: 100%;
-                    display:inline-block;
-                    padding: 15px 14px;
-                    border-bottom:#126d9b solid 1px;
-                }
-                ul{
-                    width:100%;
-                    position: relative;
-                    left:0;
-                    border:none;
-                    li{
-                        ul{
-                            left:0;
-                        }
-                    }
-                }
-                &.show-sub{
-                    ul{
+        .mobilemenu_ul{
+            display:none;
+            width:100%;
+            min-width:300px;
+            position: absolute;
+            margin-top:20px;
 
-                    }
-                    > ul{
-                        display:inline-block;
+            &.flyout_left{
+                max-width:300px;
+                height:100vh;
+                overflow-y:auto; 
+                position: fixed;
+                display:block;
+                visibility:hidden;
+                transition: all ease 0.4s;
+                -webkit-transition: all ease 0.4s;
+                left:-100%;
+                right:auto;
+                top:0px;
+                opacity:0;
+                &.ul_opened{
+                    left:0%;
+                    opacity:1;
+                    visibility:visible;
+                    z-index:21;
+                    background:#fff;
+                }
+            }
+
+            &.flyout_right{
+                max-width:300px;
+                height:100vh;
+                overflow-y:auto; 
+                position: fixed;
+                display:block;
+                visibility:hidden;
+                transition: all ease 0.4s;
+                -webkit-transition: all ease 0.4s;
+                right:-100%;
+                left:auto;
+                top:0px;
+                opacity:0;
+                &.ul_opened{
+                    right:0%;
+                    opacity:1;
+                    visibility:visible;
+                    z-index:21;
+                    background:#fff;
+                }
+                
+            }
+
+
+            &.flyout_left, &.flyout_right{
+                li{
+                    &.primary_menu_mobile_hdng{
+                        display:block;
+                        background:rgb(85, 5, 5);
+                        color:#fff;
+                        padding:15px 10px;
+                        font-size: 20px;
+                        top:0px;
+                        left:0px;
                     }
                 }
-                &.submenu{
-                    > a{
-                        &:after{
-                            display:none;
+                .menuclose-icon{
+                    width:30px;
+                    height:30px;
+                    background:#ff00ff;
+                    position: absolute;
+                    top:10px;
+                    right:10px;
+                }
+                li{
+                    a{
+                        color:#006391;
+                    }
+                }
+                .submenu{
+                    &.submenu_expanded{
+                        background: #e4f2f8;
+                        margin-bottom:1px;
+                        > ul{
+                            padding-left:10px;
                         }
-                        &:before{
-                            display:none;
+                            
+                        > a{
+                            background: #9ddffd;
                         }
                     }
-                    a{
-                        &:after{
-                            display:none;
-                        }
-                        &:before{
-                            display:none;
-                        }
+                }
+                .sub-dropdown{
+                    &:after{
+                        background:#006391;
+                    }
+                    &:before{
+                        background:#006391;
                     }
                 }
             }
+
         }
     }
+    
 
 }
 
