--- a/HTML/html-v5/assets/css/custom.css
+++ b/HTML/html-v5/assets/css/custom.css
@@ -5,3 +5,20 @@ header{ width:100%; float:left; position: relative; z-index:2; transition: -webk
 .Sticky{ /*-webkit-transform: translateY(-60px); transform: translateY(-60px); */	position: fixed; top:0; left:0; }
 
 #preloader { width: 100%; height: 100%; position: fixed; top: 0; left: 0; background: #fff; z-index: 999; }
+
+nav.navbar.bootsnav li{ text-transform: uppercase; }
+nav.navbar.bootsnav .attr-nav li a{ color:#000; } 
+nav.navbar.bootsnav li a,
+nav.navbar.bootsnav li.dropdown ul.dropdown-menu > li > a,
+nav.navbar.bootsnav ul.dropdown-menu.megamenu-content .content ul.menu-col li a{ color:#fff; border-bottom:1px solid #fff; }
+nav.navbar.bootsnav li.dropdown ul.dropdown-menu{ border-top:1px solid; background: #09203a; }
+nav.bootsnav .megamenu-content .title{ font-size: 14px; text-transform: uppercase; color:#fff; }
+
+
+.thumbnail-info-box{ width:100%; display: inline-block; position: relative; }
+.thumbnail-info-box .image-frame{ width:100%; height:200px; overflow: hidden; position: relative; }
+.thumbnail-info-box .image-frame img{ width:100%; height:100%; object-fit:cover; }
+.thumbnail-info-box .image-overlay{ width:100%; height:100%; position: absolute; display: flex; -webkit-display: flex; -ms-display: flex; align-items:center; justify-content: center; top:0px; right:0px; overflow: hidden; background: rgba(0,0,0,0.4); text-align: center; }
+.thumbnail-info-box .image-link-icon{  width:50px; height:50px;  display: inline-block; border:#f5d835 2px solid; border-radius: 100%; position: absolute; top:50%; left:50%; transform: translate(-50%, -50%); -webkit-transform: translate(-50%, -50%); -ms-transform: translate(-50%, -50%); z-index: 1; }
+.thumbnail-info-box .content-box{ width:100%; min-height: 100px; padding:20px; position: relative; }
+
